--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,10 @@ dependencies {
 }
 
 shadowJar {
-    archiveFileName = 'addressbook.jar'
+    archiveFileName = 'immuniMate.jar'
 }
 
+run {
+    enableAssertions = true
+}
 defaultTasks 'clean', 'test'
